--- a/.env.example
+++ b/.env.example
@@ -4,17 +4,17 @@
 # Hostname or IP address of the machine running TWS or IB Gateway
 IB_HOST=host.docker.internal
 
-# Port number for the TWS/Gateway API
-# Default Ports:
-# TWS Live: 7496
-# TWS Paper: 7497
-# Gateway Live: 4001
-# Gateway Paper: 4002
-IB_PORT=7497
+GATEWAY_BASE_URL=https://localhost
+GATEWAY_INTERNAL_BASE_URL=https://host.docker.internal
+GATEWAY_PORT=9999
+GATEWAY_ENDPOINT=/v1/api
 
-# Client ID for this API connection (must be unique per connection)
-# Choose any unused ID between 1 and 32 for TWS, or 1-8 for Gateway.
-IB_CLIENT_ID=1
+# TICKER (Keeps the session alive)
+TICKLE_INTERVAL=60
+TICKLE_BASE_URL=https://host.docker.internal:{GATEWAY_PORT}/v1/api
+TICKLE_ENDPOINT=/tickle
 
-# Optional: Log level for ib_async (DEBUG, INFO, WARNING, ERROR)
-# IB_LOG_LEVEL=INFO
+# MCP SERVER
+MCP_SERVER_PORT=8888
+MCP_SERVER_LOG_LEVEL=info # 'critical', 'error', 'warning', 'info', 'debug', 'trace'
+MCP_TRANSPORT_PROTOCOL=sse # sse or st
