--- a/mcp_server/pyproject.toml
+++ b/mcp_server/pyproject.toml
@@ -9,10 +9,13 @@ authors = [
 requires-python = ">=3.11"
 dependencies = [
     "fastmcp>=2.5.0",
+    "fastapi>=0.115.12",
+    "uvicorn>=0.24.0",
     "httpx>=0.24.0",
     "urllib3>=2.0.0",
     "mcp>=0.5.0",
     "asyncio>=3.4.3",
+    "aiohttp>=3.9.0",
 ]
 
 [tool.uv]
