testing endpoint move to routers folder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -79,7 +79,7 @@ services:
       - mcp_net
     volumes:
       # Mount local directory for development
-      - ./mcp_server:/app
+      - ./mcp_server:/app/mcp_server
     stdin_open: true
     tty: true
     restart: unless-stopped
