--- a/mcp_server/Dockerfile
+++ b/mcp_server/Dockerfile
@@ -15,6 +15,9 @@ COPY pyproject.toml ./
 # Copy the entire mcp_server directory
 COPY . /app/mcp_server
 
+# Create routers directory (will be mounted)
+RUN mkdir -p /app/routers
+
 # Debug: List files to verify server.py is copied
 RUN ls -la /app/mcp_server/
 
