routers generator posponed and manually generating endpoints

--- a/.env.example
+++ b/.env.example
@@ -6,15 +6,28 @@ IB_HOST=host.docker.internal
 
 GATEWAY_BASE_URL=https://localhost
 GATEWAY_INTERNAL_BASE_URL=https://host.docker.internal
-GATEWAY_PORT=9999
+GATEWAY_PORT=5055
 GATEWAY_ENDPOINT=/v1/api
+GATEWAY_TEST_ENDPOINT=/v1/api/iserver/account/orders
 
 # TICKER (Keeps the session alive)
 TICKLE_INTERVAL=60
-TICKLE_BASE_URL=https://host.docker.internal:{GATEWAY_PORT}/v1/api
+TICKLE_BASE_URL=https://host.docker.internal:5055/v1/api
 TICKLE_ENDPOINT=/tickle
 
 # MCP SERVER
-MCP_SERVER_PORT=8888
-MCP_SERVER_LOG_LEVEL=info # 'critical', 'error', 'warning', 'info', 'debug', 'trace'
-MCP_TRANSPORT_PROTOCOL=sse # sse or st
+MCP_SERVER_HOST=0.0.0.0
+# MCP_SERVER_HOST=localhost
+MCP_SERVER_BASE_URL=https://localhost
+MCP_SERVER_INTERNAL_BASE_URL=https://host.docker.internal
+MCP_SERVER_PORT=5002
+MCP_SERVER_PATH=/mcp
+ # 'critical', 'error', 'warning', 'info', 'debug', 'trace'
+MCP_SERVER_LOG_LEVEL=info
+ # sse or streamable-http
+MCP_TRANSPORT_PROTOCOL=streamable-http
+
+# ROUTERS_GENERATOR
+OPEN_API_SPEC_URL=https://api.ibkr.com/gw/api/v3/api-docs
+OPENAPI_FILE_PATH=openapi.json
+
