--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,3 @@
-# Interactive Brokers Connection Details
-# Copy this file to .env and fill in your actual values
-
-# Hostname or IP address of the machine running TWS or IB Gateway
-IB_HOST=host.docker.internal
-
-GATEWAY_BASE_URL=https://localhost
-GATEWAY_INTERNAL_BASE_URL=https://host.docker.internal
 GATEWAY_PORT=5055
 GATEWAY_ENDPOINT=/v1/api
 GATEWAY_TEST_ENDPOINT=/v1/api/iserver/account/orders
@@ -26,8 +18,11 @@ MCP_SERVER_PATH=/mcp
 MCP_SERVER_LOG_LEVEL=info
  # sse or streamable-http
 MCP_TRANSPORT_PROTOCOL=streamable-http
+MCP_DEV_MODE=true
 
 # ROUTERS_GENERATOR
 OPEN_API_SPEC_URL=https://api.ibkr.com/gw/api/v3/api-docs
 OPENAPI_FILE_PATH=openapi.json
-
+INCLUDED_TAGS="Alerts,Contract,Events Contracts,FA Allocation Management,FYIs & Notifications,Market Data,Options Chains,Order Monitoring,Orders,Portfolio,Portfolio Analyst,Scanner,Session,Watchlists"
+# Overides INCLUDED TAGS
+EXCLUDED_TAGS="Options Chains, Orders, FA Allocation Management"
