fixed .env.example and deprecated pydantic

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
+# Copy this file to .env and fill in the values
 GATEWAY_PORT=5055
 GATEWAY_ENDPOINT=/v1/api
 GATEWAY_TEST_ENDPOINT=/v1/api/iserver/account/orders
+GATEWAY_INTERNAL_BASE_URL=https://host.docker.internal
 
 # TICKER (Keeps the session alive)
 TICKLE_INTERVAL=60
@@ -23,6 +25,6 @@ MCP_DEV_MODE=true
 # ROUTERS_GENERATOR
 OPEN_API_SPEC_URL=https://api.ibkr.com/gw/api/v3/api-docs
 OPENAPI_FILE_PATH=openapi.json
-INCLUDED_TAGS="Alerts,Contract,Events Contracts,FA Allocation Management,FYIs & Notifications,Market Data,Options Chains,Order Monitoring,Orders,Portfolio,Portfolio Analyst,Scanner,Session,Watchlists"
+INCLUDED_TAGS="Alerts,Contract,Events Contracts,FA Allocation Management,FYIs & Notifications,Market Data,Options Chains,Order Monitoring,Orders,Portfolio,Portfolio Analyst,Scanner,Session,Watchlists,Authorization Token,Account Management Reports"
 # Overides INCLUDED TAGS
 EXCLUDED_TAGS="Options Chains, Orders, FA Allocation Management"
