Integrate tickler functionality into api_gateway service
- Move tickler logic from separate service into api_gateway container
- Create api_gateway/tickler.sh with keep-alive functionality
- Modify run_gateway.sh to start tickler after gateway becomes healthy
- Update Dockerfile to include tickler.sh and install curl
- Remove standalone tickler service from docker-compose.yml
- Update mcp_server dependency to wait for healthy api_gateway

This eliminates the need for a separate tickler container while maintaining the same keep-alive functionality.

--- a/api_gateway/Dockerfile
+++ b/api_gateway/Dockerfile
@@ -24,6 +24,13 @@ RUN chmod +x /app/run_gateway.sh
 COPY healthcheck.sh /usr/local/bin/healthcheck.sh
 RUN chmod +x /usr/local/bin/healthcheck.sh
 
+# Copy the tickler script and make it executable
+COPY tickler.sh /app/tickler.sh
+RUN chmod +x /app/tickler.sh
+
+# Install curl for the tickler script
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 # By default, the gateway will listen on port 5000
 EXPOSE 5055
 
