--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "workbench.colorTheme": "Tomorrow Night Blue",
     "containers.containerClient": "com.microsoft.visualstudio.containers.docker",
-    "chat.mcp.discovery.enabled": true
+    "chat.mcp.discovery.enabled": {
+        "claude-desktop": true,
+        "windsurf": true,
+        "cursor-global": true,
+        "cursor-workspace": true
+    }
 }
