--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -74,11 +74,21 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Log in to GitHub Container Registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/ib_mcp_api_gateway
+          images: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/ib_mcp_api_gateway
+            ghcr.io/${{ github.repository_owner }}/ib_mcp_api_gateway
           tags: |
             # Branch name
             type=ref,event=branch
@@ -131,11 +141,21 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Log in to GitHub Container Registry
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ secrets.DOCKERHUB_USERNAME }}/ib_mcp_mcp_server
+          images: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/ib_mcp_mcp_server
+            ghcr.io/${{ github.repository_owner }}/ib_mcp_mcp_server
           tags: |
             # Branch name
             type=ref,event=branch
