--- a/api_gateway/conf.yaml
+++ b/api_gateway/conf.yaml
@@ -1,4 +1,4 @@
-ip2loc: "US"
+ip2loc: "CZ"
 proxyRemoteSsl: true
 proxyRemoteHost: "https://api.ibkr.com"
 listenPort: 5055
@@ -12,17 +12,17 @@ sslPwd: "mywebapi"
 authDelay: 3000
 portalBaseURL: ""
 serverOptions:
-    blockedThreadCheckInterval: 1000000
-    eventLoopPoolSize: 20
-    workerPoolSize: 20
-    maxWorkerExecuteTime: 100
-    internalBlockingPoolSize: 20
+  blockedThreadCheckInterval: 1000000
+  eventLoopPoolSize: 20
+  workerPoolSize: 20
+  maxWorkerExecuteTime: 100
+  internalBlockingPoolSize: 20
 cors:
-    origin.allowed: "*"
-    allowCredentials: false
+  origin.allowed: "*"
+  allowCredentials: false
 webApps:
-    - name: "demo"
-      index: "index.html"
+  - name: "demo"
+    index: "index.html"
 ips:
   allow:
     - 192.*
