--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,11 +10,10 @@ services:
     env_file:
       - .env
     environment:
-      - XX:XX
-      # - GATEWAY_INTERNAL_BASE_URL=${GATEWAY_INTERNAL_BASE_URL}
-      # - GATEWAY_PORT=${GATEWAY_PORT}
-      # - GATEWAY_ENDPOINT=${GATEWAY_ENDPOINT}
-      # - GATEWAY_TEST_ENDPOINT=${GATEWAY_TEST_ENDPOINT}
+      - GATEWAY_INTERNAL_BASE_URL=${GATEWAY_INTERNAL_BASE_URL}
+      - GATEWAY_PORT=${GATEWAY_PORT}
+      - GATEWAY_ENDPOINT=${GATEWAY_ENDPOINT}
+      - GATEWAY_TEST_ENDPOINT=${GATEWAY_TEST_ENDPOINT}
     networks:
       - mcp_net
     volumes:
