--- a/api_gateway/conf.yaml
+++ b/api_gateway/conf.yaml
@@ -25,8 +25,10 @@ webApps:
     index: "index.html"
 ips:
   allow:
-    - 192.*
+    - 127.*      # localhost
+    - 192.*      # private network
     - 131.216.*
-    - 172.*
+    - 172.*      # Docker/Podman bridge
+    - 10.*       # common private network
   deny:
     - 212.90.324.10
