--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       - .env
     environment:
       - ROUTERS_PATH=/app/mcp_server/routers
+      - FASTMCP_EXPERIMENTAL_ENABLE_NEW_OPENAPI_PARSER=true
       # GATEWAY_BASE_URL: ${GATEWAY_INTERNAL_BASE_URL}
       # GATEWAY_PORT: ${GATEWAY_PORT}
       # GATEWAY_ENDPOINT: ${GATEWAY_ENDPOINT}
